# project-based-assessment

./: .gitignore  .pylintrc  CODE_OF_CONDUCT.md  README.md  SECURITY.md  data.csv  data2.csv  pyproject.toml  setup.py  student.csv  test.py  test2.py  test3.py  test4.py
.github/workflows/: codeql-analysis.yml
ProjectAssessment/: Marginal.py  Solver.py  __init__.py
scaleneResults/: profile.html  profile.json
src/ProjectAssessment/: MakeTable.py  Solver.py  __init__.py
tests/: data2.csv  data3.csv  test2.py
