[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ProjectAssessment"
version = "0.0.8"
authors = [
  { name="Ben O. Smith", email="bosmith@unomaha.edu" },
]
description = "Package to compute the Project-Based Assessment estimates of student and rubric proficiency."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha", 
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    'numpy>=1.21.0',
    'pandas>=1.4.0',
    'progress>=1.5',
    'scipy>=1.7.0',
    'prettytable>=3.3.0',
]
keywords = ['Assessment', 'Projects', 'Statistics', 'Education', 'Bootstrap']

[project.urls]
"Homepage" = "https://github.com/tazzben/project-based-assessment"
"Bug Tracker" = "https://github.com/tazzben/project-based-assessment/issues"