[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ProjectAssessment"
version = "0.3.1"
authors = [
  { name="Ben Smith", email="bosmith@unomaha.edu" },
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "tqdm>=4.26.0",
    "numba>=0.54.0",
    "scipy>=1.4.0",
]
description = "Package to compute the Project-Based Assessment estimates of student and rubric proficiency."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.7',
]

[project.urls]
"Homepage" = "https://github.com/tazzben/project-based-assessment"
"Bug Tracker" = "https://github.com/tazzben/project-based-assessment/issues"