[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ProjectAssessment"
version = "0.3.3"
description = "Package to compute the Project-Based Assessment estimates of student and rubric proficiency."
license = "MIT"
authors = [
  { name="Ben Smith", email="bosmith@unomaha.edu" },
]
maintainers = [
  { name="Ben Smith", email="bosmith@unomaha.edu" },
]
readme = "README.md"
homepage = "https://github.com/tazzben/project-based-assessment"
repository = "https://github.com/tazzben/project-based-assessment"
keywords = ["Assessment", "Projects", "Statistics", "Education", "Bootstrap"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "tqdm>=4.26.0",
    "numba>=0.54.0",
    "scipy>=1.4.0",
]

[project.urls]
"Homepage" = "https://github.com/tazzben/project-based-assessment"
"Bug Tracker" = "https://github.com/tazzben/project-based-assessment/issues"